[gd_scene load_steps=2 format=3 uid="uid://login_ui_scene"]

[ext_resource type="Script" path="res://client/scripts/ui/login_ui.gd" id="1_login_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LoginUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_login_ui")

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 500.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = ""

[node name="LoginPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Login"
horizontal_alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="PasswordEdit" type="LineEdit" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Senha"
secret = true

[node name="LoginButton" type="Button" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Entrar"

[node name="ShowRegisterButton" type="Button" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
text = "Criar conta"

[node name="RegisterPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="RegisterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Registrar"
horizontal_alignment = 1

[node name="UsernameEdit" type="LineEdit" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username (min. 3 caracteres)"

[node name="EmailEdit" type="LineEdit" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordEdit" type="LineEdit" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Senha (min. 6 caracteres)"
secret = true

[node name="ConfirmPasswordEdit" type="LineEdit" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Confirmar senha"
secret = true

[node name="RegisterButton" type="Button" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Registrar"

[node name="ShowLoginButton" type="Button" parent="RegisterPanel/VBoxContainer"]
layout_mode = 2
text = "JÃ¡ tenho conta"

